--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ http://www.templatemo.com/tm-503-newline
                               <p> L'outil permet de créer, modifier et administrer l'infrastructure informatique facilement et automatiquement avec le code, en évitant le travail manuel.</p>
                                <div class="primary-button">
 							    <!-- creer bouton teraforme vers lien html -->
-							   <a href="https://github.com/LeclubBrassin/LeclubBrassin.github.io"" class="button"> Voir plus</a>
+							   <a href="https://leclubbrassin.github.io/"" class="button"> Voir plus</a>
                               </div>
                               </div>
                             </div>
